    ~ Corrected and optimized deal log generation (less unused information generated)
    ~ Corrected fool owner if played at last trick
    ~ Corrected handle detection after building the discard
    ~ Corrected the need of card double-click if the previous trick flushing was not automatic (Qt event problem)
    ~ Corrected game freeze under Linux (Menu game > quit after first launch)
    + New hand-made makefile do build the TCDS executable
    + New code coverage script
    + New deal reading facility
    + Window and docks geometry is now memorized on exit and applied on start

## version 2.3.6 (01/08/2014)

    ~ Still missing some translations, added factorization of texts to simplify the translation process
    ~ Corrected the Mkdir() method under windows

## version 2.3.5 (31/07/2014)

    ~ About box was too large (switched to a text edit control)   
    ~ Various defense AI corrections and function bugs
    ~ JS script context is now reloaded at each new game with a proper heap cleaning
    ~ Corrected upper limit of the numbered deal (32-bit signed value)
    ~ Tournament box is now cleared when the game starts
    ~ Correction of all the diamond suit cards (rendering problem) - Contribution by Hizoka
    + Change in the network protocol: clear separation between a game and a deal (preparation for network game enhencements)
    + New AI attack, basic version, with discard build   
    
## version 2.3.4 (19/07/2014)

    ~ Correction: little endian bonus in case of slam and fool in last trick was not detected
    ~ Correction: translated deal result text in french
    ~ Correction of the highest suit dection (trick winner)
    ~ Correction of the last trick, it was not taken into account
    + New drop shadow effect on cards
    + New radial gradient effect for the background color

## version 2.3.3 (17/07/2014)

    ~ Correction: show handle sequence was not managed well
    ~ Correction: the dog cards was hidden in the player's hand